--- a/src/Containers/Contact/Contact.css
+++ b/src/Containers/Contact/Contact.css
@@ -68,7 +68,8 @@
 
 .loading{
     margin: auto;    
-    margin-top: 100px;
+    margin-top: 150px;
+    margin-bottom: 150px;
 
     width: fit-content;
 }
